# AdventOfCode2024

./: .gitignore  CMakeLists.txt  README.md
days/01/: day01.cpp
days/02/: day02.cpp
days/03/: day03.cpp
days/04/: day04.cpp
days/05/: day05.cpp
days/06/: day06.cpp
days/07/: day07.cpp
days/08/: day08.cpp
days/09/: day09.cpp
days/10/: day10.cpp
days/11/: day11.cpp
days/12/: day12.cpp
days/13/: day13.cpp
days/14/: day14.cpp
days/15/: day15.cpp
days/16/: day16.cpp
days/17/: day17.cpp
days/18/: day18.cpp
days/19/: day19.cpp
days/20/: day20.cpp
days/21/: day21.cpp
days/22/: day22.cpp
days/23/: day23.cpp
days/24/: day24.cpp
days/25/: day25.cpp
lib/: CMakeLists.txt  utils.h
